# khaliq-lab-to-nwb

./: .gitignore  .pre-commit-config.yaml  README.md  make_env.yml  pyproject.toml
notebooks/: 001693_demo.ipynb
src/khaliq_lab_to_nwb/conversion_abf/: conversion_notes.md  convert_session.py  detect_saturation.py  icephys_neo_interface.py  protocol_epochs.py  saturation_annotation.py
src/khaliq_lab_to_nwb/conversion_abf/assets/: analyze_session_timing.py  corrupted_recordings.txt  file_corruption_status.csv  file_read_failures.csv  session_metadata.csv  session_metadata_cn_amended.csv  session_timing_analysis.csv
src/khaliq_lab_to_nwb/embargo2002a/: __init__.py  behaviorinterface.py  convert_all_sessions.py  convert_session.py  metadata.yaml  notes.md  nwbconverter.py
