[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "khaliq-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Khaliq conversion"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "neo>=0.15.0.dev0",
    "neuroconv>0.8",
    "nwbinspector",
    "openpyxl>=3.1.5",
]

[project.urls]
Homepage = "https://github.com/catalystneuro/khaliq-lab-to-nwb"
Repository = "https://github.com/catalystneuro/khaliq-lab-to-nwb"

[tool.hatch.build.targets.wheel]
packages = ["src/khaliq_lab_to_nwb"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
]


[tool.uv.sources]
neuroconv = { path = "../../work_repos/neuroconv", editable = true }
neo = { path = "../../work_repos/python-neo", editable = true }

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["khaliq_lab_to_nwb"]

[tool.codespell]
skip = '*.git*,*.pdf,*.css, *.ipynb,*/assets/*,*.txt'
check-hidden = true
ignore-words-list = 'assertin,sems,sinlge,singl,som'

[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",     # All isort rules
    "UP006", # non-pep585 annotation (tuple, list -> tuple, list)
    "UP007", # non-pep604 annotation (Union[x, y] -> X | Y)
    "UP045", # non pep604 annotation (Optional[x] -> x | None)
]
fixable = ["ALL"]


[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["khaliq_lab_to_nwb"]

